# MineSweeper

./: CMakeLists.txt  README.md  grid.cpp  grid.h  leaderboard.cpp  leaderboard.h  main.cpp
files/: config.cfg  leaderboard.txt
